# Hand_Detection_and_Segmentation

./: README.md
Code/: CMakeLists.txt
Code/inc/: DetAndSegmentation.h
Code/src/: DetAndSegmentation.cpp  main.cpp
Metrics Code/: CMakeLists.txt
Metrics Code/inc/: Metrics.h
Metrics Code/src/: Metrics.cpp  main.cpp
Test Results/Bounding Boxes Accuracy/: 01_accuracy.txt  02_accuracy.txt  03_accuracy.txt  04_accuracy.txt  05_accuracy.txt  06_accuracy.txt  07_accuracy.txt  08_accuracy.txt  09_accuracy.txt  10_accuracy.txt  11_accuracy.txt  12_accuracy.txt  13_accuracy.txt  14_accuracy.txt  15_accuracy.txt  16_accuracy.txt  17_accuracy.txt  18_accuracy.txt  19_accuracy.txt  20_accuracy.txt
Test Results/Labels Results/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt
Test Results/Pixel Accuracy/: 01_pixel_accuracy.txt  02_pixel_accuracy.txt  03_pixel_accuracy.txt  04_pixel_accuracy.txt  05_pixel_accuracy.txt  06_pixel_accuracy.txt  07_pixel_accuracy.txt  08_pixel_accuracy.txt  09_pixel_accuracy.txt  10_pixel_accuracy.txt  11_pixel_accuracy.txt  12_pixel_accuracy.txt  13_pixel_accuracy.txt  14_pixel_accuracy.txt  15_pixel_accuracy.txt  16_pixel_accuracy.txt  17_pixel_accuracy.txt  18_pixel_accuracy.txt  19_pixel_accuracy.txt  20_pixel_accuracy.txt
